# NovomaticProjects

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
BlueprintLayout/: CMakeLists.txt
BlueprintLayout/src/: main.cpp
BlueprintLayout/src/algo/: AutoLayout.cpp  AutoLayout.h
BlueprintLayout/src/data/: blueprint.json
BlueprintLayout/src/io/: DataLoader.cpp  DataLoader.h
BlueprintLayout/src/model/: Edge.h  Graph.h  Node.h
BlueprintLayout/src/view/: GraphRenderer.cpp  GraphRenderer.h
BlueprintLayout/tests/: layout_tests.cpp  test_main.cpp
LogAnalyzer/: CMakeLists.txt
LogAnalyzer/src/: main.cpp
LogAnalyzer/src/algo/: QueryHandler.cpp  QueryHandler.h  QueryParser.cpp  QueryParser.h
LogAnalyzer/src/io/: LogParser.cpp  LogParser.h
LogAnalyzer/src/model/: LogStructure.h  Query.h
LogAnalyzer/tests/: test_main.cpp
TicketingSystem/: CMakeLists.txt  Ticket.h  client.cpp  server.cpp
TicketingSystem/Client/: client.cpp  moneyData.txt
TicketingSystem/Server/: server.cpp  ticketsData.txt
